tests/machine/x/pl/pure_global_fold.error
exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/pure_global_fold.pl:6: user:main is/2: Arguments are not sufficiently instantiated
