tests/machine/x/pl/pure_global_fold.pl
% Generated by Mochi compiler v0.10.26 on 2025-07-16T17:40:33Z
:- style_check(-singleton).
inc(X, _Res) :-
    _Res is (X + K).

:- initialization(main, main).
main :-
    K is 2,
    inc(3, _V0),
    writeln(_V0),
    true.
